fixing overflow on mobile

--- a/public/styles3.css
+++ b/public/styles3.css
@@ -5,6 +5,7 @@ body{
     color: #eee;
     font-family: Poppins;
     font-size: 12px;
+    overflow: hidden;
 }
 a{
     text-decoration: none;
